feat(reranking): implement reranking for serve
