# runner/server/route.go
@@ -23,6 +23,7 @@ func RegisterSwagger(r *gin.Engine) {
 	g.GET("/swagger.yaml", docs.SwaggerYAMLHandler())
 	g.StaticFS("/ui", docs.FS)
 }
+
 func RegisterAPIv1(r *gin.Engine) {
 	g := r.Group("/v1")
 
@@ -35,9 +36,10 @@ func RegisterAPIv1(r *gin.Engine) {
 
 	g.POST("/images/generations", handler.ImageGenerations)
 
-	//g.POST("/reranking", handler.Reranking)
+	g.POST("/reranking", handler.Reranking)
 
 	g.GET("/models/*model", handler.RetrieveModel)
+
 	g.GET("/models", handler.ListModels)
 	// extend for pull model
 	g.POST("/models", handler.PullModel)
